Fix CustomUserDetails
Implement all methods and write getAuthorities